added badge events, a badge layout, as well as a functional events button

--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -1,4 +1,4 @@
-{% extends "dashboard_layout.html" %}
+{% extends "badges_layout.html" %}
 {% block main %}
 
 {% with messages = get_flashed_messages(with_categories=true) %}
@@ -101,34 +101,6 @@
                             delete
                         </button></td>
                     </tr>
-                {% endfor %}
-                
-                <tr> <td> -- </td> </tr>
-                
-                {% for event in mesa_events[badge.badge_id][:5] %}
-                    <tr>
-                        <td>
-                            {{ event['summary'] }}
-                            - in {{ event['remain_days'] }} days
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            {{ event['start_string'] }}
-                            at {{ event['location'] }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            badge: {{event['badgeColor']}}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href={{ event['htmlLink'] }}> Event Link </a>
-                        </td>
-                    </tr>
-                    <tr><td> -- </td></tr>
                 {% endfor %}
             </tbody>
         </table>
