--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -38,13 +38,13 @@
             <!--Grid column-->
             <div class="col-lg-7 mb-4">
                 <!--Excerpt-->
-                <a href="" class="text" style="color: black"><h6 class="pb-1"><strong> Level {{ lv }} </strong></h6></a>
-                <h4 class="mb-4"><strong>Earned points for Badge {{ badge.badge_name }}</strong></h4>
-                <p>You've earned {{ pt }} points for this badge</p>
+                <h4 class="mb-4"><strong>Badge {{ badge.badge_name }}</strong></h4>
+                <a href="" class="text" style="color: black"><h6 class="pb-1"><strong> Level <a style="font-size: 150%">{{ lv }}</a> </strong></h6></a>
+                <p><a><strong>Total points earned:</strong></a> <a style="font-size: 150%"><strong>{{ pt }} points</strong></a></p>
                 {% if to_next_lv == 0 %}
                     <p><a><strong>You've achieved the maximum level!</strong></a></p>
                 {% else %}
-                    <p><a><strong>You need {{ to_next_lv }} points to get next level</strong></a></p>
+                    <p><a><strong>Point to next level:</strong></a> <a style="font-size: 150%"><strong>{{ to_next_lv }} points</strong></a></p>
                 {% endif %}
             </div>
             <!--Grid column-->
@@ -62,13 +62,15 @@
         Unearned Stamps For Badge {{ badge.badge_name }}
     </div>
     <div class="card-body">
-        <table class="table table-hover mb-0" id="unearnedTable">
+        <table class="table table-striped table-bordered table-responsive-md" id="unearnedTable">
             <thead>
                 <th>Unearned Stamps</th>
             </thead>
             <tbody>
                 {% for u in unearned %}
-                    <tr><td>{{ u }}</td></tr>
+                    <tr>
+                        <td>{{ u }}</td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
@@ -84,7 +86,7 @@
         Earned Stamps For Badge {{ badge.badge_name }}
     </div>
     <div class="card-body">
-        <table class="table table-hover mb-0" id="earnedTable">
+        <table class="table table-striped table-bordered table-responsive-md" id="earnedTable" style="width: 100%">
             <thead>
                 <th>Earned Stamps</th>
                 <th>earned date</th>
