--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -139,7 +139,7 @@
 
                 <!-- First column -->
 
-                <div class="col-lg-8 col-md-12">
+                <div class="col-lg-7 col-md-12">
                     <div class="row">
                         <div class="col-lg-4 col-md-8">
                             <div class="card mb-4">
@@ -186,7 +186,7 @@
                 </div>
                 <!-- Second column -->
 
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-5 col-md-12">
 
                     <!--Panel-->
                     <div class="card mb-4" id='calendar-div'>
@@ -218,7 +218,7 @@
                                     </div>
                                     <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
                                         <div class="card-body">
-                                            <table class="table table-hover mb-0" id="upEvent">
+                                            <table class="table table-striped table-bordered table-responsive-md" id="upEvent">
                                                 <thead>
                                                     <th>General Events</th>
                                                     <th>Remain Days</th>
@@ -244,7 +244,7 @@
                                 <div class="card">
                                     <!-- Card header -->
                                     <div class="card-header" role="tab" id="headingTwo2">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="true" aria-controls="collapseTwo2">
                                             <h5 class="mb-0">
                                                 MESA Event <i class="fa fa-angle-down rotate-icon"></i>
                                             </h5>
@@ -253,7 +253,7 @@
                                     <!-- Card body -->
                                     <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
                                         <div class="card-body">
-                                            <table class="table table-hover mb-0" id="mesaEvent">
+                                            <table class="table table-striped table-bordered table-responsive-md" id="mesaEvent">
                                                 <thead>
                                                     <th>MESA Events</th>
                                                     <th>Time</th>
