--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -23,12 +23,15 @@
     <link href="../static/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <link href="../static/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"> -->
-    <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/dataTables.bootstrap4.min.css"/>
     <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
     <link href="../static/css/css-circular-prog-bar.css" media="all" rel="stylesheet" type="text/css"/>
     <style>
         body {
             font-family: Merriweather;
+        }
+        .min-chart .percent:after {
+            display: none;
         }
     </style>
 </head>
@@ -92,7 +95,8 @@
     <script type="text/javascript" src="../static/js/mdbdashboard2.min.js"></script>
     <!-- Gijgo Datepicker -->
     <script type="text/javascript" src="../static/js/gijgo.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="../static/js/dataTables.bootstrap4.min.js"></script>
     <!--Countdown Clock-->
     <script type="text/javascript" src="../static/js/jquery.countdown.min.js"></script>
     <!--<script type="text/javascript" href="{{ url_for('static', filename='js/jquery.countdown.min.js') }}"></script>-->
@@ -111,6 +115,14 @@
         
         $('#upEvent').DataTable();
         $('#mesaEvent').DataTable();
+        $(function () {
+            $('.min-chart#chart-sales').easyPieChart({
+                barColor: "#FF5252",
+                onStep: function (from, to, percent) {
+                    $(this.el).find('.percent').text("Lv.");
+                }
+            });
+        });
     </script>
     {% block scripts %}{% endblock scripts %}
     <!--Custom scripts-->
