--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -113,36 +113,30 @@
 
 <div class="card mb-4">
     <div class="card">
-        <div class="card-header" role="tab" id="headingOne1">
-            <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
-                <h5 class="mb-0">
-                    {{ badge.badge_name }} <i class="fa fa-angle-down rotate-icon"></i>
-                </h5>
-            </a>
+        <div class="card-header white-text primary-color">
+            {{ badge.badge_name }} Events
         </div>
-        <div id="collapseThree3" class="collapse show" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-            <div class="card-body">
-                <table class="table table-hover mb-0" id="upEvent">
-                    <thead>
-                        <th>General Events</th>
-                        <th>Remain Days</th>
-                        <th>Time</th>
-                        <th>Location</th>
-                    </thead>
-                    <tbody>
-                        {% for event in mesa_events[badge.badge_id][:10] %}
-                            {% if event['remain_days'] < 15 %} 
-                                <tr>
-                                    <td>{{event['summary']}}</td>
-                                    <td>{{event['remain_days']}}</td>
-                                    <td>{{event['start_string']}}</td>
-                                    <td>{{event['location']}}</td>
-                                </tr>
-                            {% endif %}
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+        <div class="card-body">
+            <table class="table table-hover mb-0" id="eventTable">
+                <thead>
+                    <th>General Events</th>
+                    <th>Remain Days</th>
+                    <th>Time</th>
+                    <th>Location</th>
+                </thead>
+                <tbody>
+                    {% for event in mesa_events[badge.badge_id][:10] %}
+                        {% if event['remain_days'] < 15 %} 
+                            <tr>
+                                <td>{{event['summary']}}</td>
+                                <td>{{event['remain_days']}}</td>
+                                <td>{{event['start_string']}}</td>
+                                <td>{{event['location']}}</td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
