--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -7,6 +7,13 @@
     .stepper li.active a .white-skin .circle, .stepper li.completed a .white-skin .circle, .white-skin .primary-color, .white-skin .stepper li.active a .circle, .white-skin .stepper li.completed a .circle {
         background-color: #716558 !important;
     }
+    .countdown {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    min-height:180px;
+    text-align:center;
+    width:180px;
+    }
 </style>
 <body class="fixed-sn white-skin">
 
@@ -147,7 +154,7 @@
                                     Time Until First Event
                                 </div>
                                 <div class="card-body">
-                                        <span id="clock" data-date-string={{events[0][ 'date_string' ]}}></span>
+                                        <span id="clock" class="countdown" data-date-string={{events[0][ 'date_string' ]}}></span>
                                 </div>
                             </div>    
                         </div>
@@ -158,9 +165,7 @@
                                     Time Until Last Event
                                 </div>
                                 <div class="card-body">
-                                    <table>
-                                        <tr><td><span id="clock2" data-date-string-second={{events[-1][ 'date_string' ]}}></span></td></tr>
-                                    </table>
+                                    <span id="clock2" class="countdown" data-date-string-second={{events[-1][ 'date_string' ]}}></span>
                                 </div>
                             </div>    
                         </div>
@@ -171,9 +176,7 @@
                                      Time Until MESA Day
                                 </div>
                                 <div class="card-body">
-                                    <table>
-                                        <tr><td><span id="clock3" data-date-string-third={{mesa_days[0][ 'date_string' ]}}></span></td></tr>
-                                    </table>
+                                    <span id="clock3" class="countdown" data-date-string-third={{mesa_days[0][ 'date_string' ]}}></span>
                                 </div>
                             </div>    
                         </div>
@@ -218,7 +221,7 @@
                                     </div>
                                     <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
                                         <div class="card-body">
-                                            <table class="table table-striped table-bordered table-responsive-md" id="upEvent">
+                                            <table class="table table-striped table-bordered table-responsive-md" cellspacing="0" width="100%" id="upEvent">
                                                 <thead>
                                                     <th>General Events</th>
                                                     <th>Remain Days</th>
@@ -235,35 +238,6 @@
                                                                 <td>{{event['location']}}</td>
                                                             </tr>
                                                         {% endif %}
-                                                    {% endfor %}
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <!-- Card header -->
-                                    <div class="card-header" role="tab" id="headingTwo2">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2" aria-expanded="true" aria-controls="collapseTwo2">
-                                            <h5 class="mb-0">
-                                                MESA Event <i class="fa fa-angle-down rotate-icon"></i>
-                                            </h5>
-                                        </a>
-                                    </div>
-                                    <!-- Card body -->
-                                    <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
-                                        <div class="card-body">
-                                            <table class="table table-striped table-bordered table-responsive-md" id="mesaEvent">
-                                                <thead>
-                                                    <th>MESA Events</th>
-                                                    <th>Time</th>
-                                                </thead>
-                                                <tbody>
-                                                    {% for event in mesa_days %}
-                                                            <tr>
-                                                                <td>{{event['summary']}}</td>
-                                                                <td>{{event['start_string']}}</td>
-                                                            </tr>
                                                     {% endfor %}
                                                 </tbody>
                                             </table>
