--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -73,7 +73,7 @@
                         <div class="navbar-login">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <img src="static/avatar/{{ current_user.avatar.file_name }}" class="rounded-circle account-img" alt="First sample image">
+                                    <img src="static/avatar/default.png" class="rounded-circle account-img" alt="First sample image">
                                 </div>
                             </div>
                             <div class="row">
@@ -112,7 +112,7 @@
                         <div class="collapsible-body">
                             <ul>
                                 {% for badge in badges %}
-                                    <li><a href="/badges/{{ badge.badge_id }}" class="waves-effect">{{ badge.badge_name }}</a></li>
+                                    <li><a href="/badges{{ badge.badge_id }}" class="waves-effect">{{ badge.badge_name }}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
