changed wording in countdowns

--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -163,7 +163,7 @@
                         <div class="col-lg-4 col-md-8">
                             <div class="card mb-4">
                                 <div class="card-header white-text primary-color">
-                                    Next Demo Day Countdown
+                                    2nd Demo Day Countdown
                                 </div>
                                 <div class="card-body">
                                     <table>
