--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -30,23 +30,23 @@
                 <!-- Dropdown -->
                 <li class="nav-item dropdown notifications-nav">
                     <a class="nav-link dropdown-toggle waves-effect" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {% if number_upcoming > 0 %}
-                            <span class="badge red">{{number_upcoming}}</span> <i class="fa fa-bell"></i>
+                        {% if number_current > 0 %}
+                            <span class="badge red">{{number_current}}</span> <i class="fa fa-bell"></i>
                         {% endif %}
                         <span class="d-none d-md-inline-block">Notifications</span>
                     </a>
 
                     <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
-                        {% if number_upcoming > 0 %}
-                            {% for event in upcoming_events %}
+                        {% if number_current > 0 %}
+                            {% for event in current_events %}
                                 <a class="dropdown-item" href="#">
                                     <i class="fa fa-times-rectangle mr-2" aria-hidden="true"></i>
                                     <span> {{ event['summary'] }} </span>
                                     <span class="float-right"><i class="fa fa-clock-o" aria-hidden="true"></i>
-                                        {{ event['remain_days'] }} days
+                                         {{ event['remain_days'] }} days
                                     </span>
                                 </a>
-                            {% endfor %}
+			    {% endfor %}
                         {% else %}
                             <a class="dropdown-item" href="#">
                                 <i class="fa fa-times-rectangle mr-2" aria-hidden="true"></i>
@@ -247,16 +247,14 @@
                                                     <th>Location</th>
                                                 </thead>
                                                 <tbody>
-                                                    {% for event in events[:10] %}    
-                                                        {% if event['remain_days'] < 15 %} 
-                                                            <tr>
-                                                                <td>{{event['summary']}}</td>
-                                                                <td>{{event['remain_days']}}</td>
-                                                                <td>{{event['start_string']}}</td>
-                                                                <td>{{event['location']}}</td>
-                                                            </tr>
-                                                        {% endif %}
-                                                    {% endfor %}
+                                                     {% for event in upcoming_events %}    
+                                                         <tr>
+				                              <td>{{event['summary']}}</td>
+						  	      <td>{{event['remain_days']}}</td>
+							      <td>{{event['start_string']}}</td>
+							      <td>{{event['location']}}</td>
+						         </tr>
+						     {% endfor %}
                                                 </tbody>
                                             </table>
                                         </div>
