--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -80,7 +80,7 @@
                         <div class="navbar-login">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <img src="static/avatar/default.png" class="rounded-circle account-img" alt="First sample image">
+                                    <img src="static/avatar/{{ current_user.avatar.file_name }}" class="rounded-circle account-img" alt="First sample image">
                                 </div>
                             </div>
                             <div class="row">
@@ -119,7 +119,7 @@
                         <div class="collapsible-body">
                             <ul>
                                 {% for badge in badges %}
-                                    <li><a href="/badges{{ badge.badge_id }}" class="waves-effect">{{ badge.badge_name }}</a></li>
+                                    <li><a href="/badges/{{ badge.badge_id }}" class="waves-effect">{{ badge.badge_name }}</a></li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -226,6 +226,7 @@
                                                     <th>General Events</th>
                                                     <th>Remain Days</th>
                                                     <th>Time</th>
+                                                    <th>Location</th>
                                                 </thead>
                                                 <tbody>
                                                     {% for event in events[:10] %}    
@@ -234,6 +235,7 @@
                                                                 <td>{{event['summary']}}</td>
                                                                 <td>{{event['remain_days']}}</td>
                                                                 <td>{{event['start_string']}}</td>
+                                                                <td>{{event['location']}}</td>
                                                             </tr>
                                                         {% endif %}
                                                     {% endfor %}
@@ -243,9 +245,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <form action="{{ url_for('events') }}">
+                                <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View
+                                    full upcoming events
+                                </button>
+                            </form>
                         </div>
                     </div>
-                    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
                     <!--/.Panel-->
                 </div>
                 <!-- /.Second row -->
