--- a/MESAeveryday/templates/error.html
+++ b/MESAeveryday/templates/error.html
@@ -20,16 +20,14 @@ font-weight:700}header.masthead{
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
             {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">
+                {{ message }}
+              </div>
             {% endfor %}
           {% endif %}
         {% endwith %}
-	<div class="alert alert-danger">
-    	    Sorry, we could not process that request
-    	</div>
+
     </div>
-
   </header>
-
-
 
 {% endblock content %}
