--- a/MESAeveryday/templates/admin_control.html
+++ b/MESAeveryday/templates/admin_control.html
@@ -16,6 +16,13 @@
     <li><a href="{{ url_for('admin_settings') }}">Settings</a></li>
 </div>
 
+    <div class="content-section">
+    <legend class="border-bottom mb-4">Manage School</legend>
+     <li><a href="{{ url_for('add_school') }}">Add School</a></li>
+    <li><a href="{{ url_for('delete_school') }}">Delete School</a></li>
+
+
+    </div>
 <div class="content-section">
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
