--- a/MESAeveryday/templates/admin_settings.html
+++ b/MESAeveryday/templates/admin_settings.html
@@ -17,6 +17,13 @@
 
 </div>
 
+    <div class="content-section">
+    <legend class="border-bottom mb-4">Manage Badge and Stamp</legend>
+         <li><a href="{{ url_for('add_stamp') }}">Add Stamp</a></li>
+    <li><a href="{{ url_for('delete_stamp') }}">Delete Stamp</a></li>
+    <li><a href="{{ url_for('edit_badge') }}">Edit Badge Name</a></li>
+    </div>
+
 <div class="content-section">
 
 
