Moved forms from separate pages to settings

--- a/MESAeveryday/static/css/main.css
+++ b/MESAeveryday/static/css/main.css
@@ -51,6 +51,9 @@ select {
 #avatarSelect {
     display:none!important;
 }
+#iconSelect {
+    display:none!important;
+}
 
 .p-5 {
     padding: 0rem!important;
