--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -40,18 +40,24 @@
                 <!--Excerpt-->
                 <h4 class="mb-4"><strong>Badge {{ badge.badge_name }}</strong></h4>
                 <div class="row">
-                    <div class="col-lg-8 mb-4">
+                    <div class="col-sm-12 mb-4">
                         <a href="" class="text" style="color: black"><h6 class="pb-1"><strong> Level <a style="font-size: 150%">{{ lv }}</a> </strong></h6></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 mb-4">
                         <p><a><strong>Total points earned:</strong></a> <a style="font-size: 150%"><strong>{{ pt }} points</strong></a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-8 mb-4">
                         {% if to_next_lv == 0 %}
                             <p><a><strong>You've achieved the maximum level!</strong></a></p>
                         {% else %}
                             <p><a><strong>Point to next level:</strong></a> <a style="font-size: 150%"><strong>{{ to_next_lv }} points</strong></a></p>
                         {% endif %}
                     </div>
-                    <div class="col-lg-4 mb-4">
-                        <!-- <span class="badge red">{{number_upcoming}}</span> <i class="fa fa-calendar"></i>
-                        <span class="d-none d-md-inline-block">Scroll to Events Table</span> -->
+                    <div class="col-sm-4 mb-4" style="float: right;">
                         <button onclick="divFunction()" type="button" class="btn-floating btn-fb"><i class="fa fa-calendar" title="Click to scroll to event table"></i></button>
                         {% if number_upcoming > 0 %}
                         <span id="countEvent" class="counter"></span>
@@ -66,30 +72,6 @@
     </div>
 </div>
 <!--/.Panel-->
-
-<!-- Panel -->
-
-<div class="card mb-4" style="background-color: {{ badge.color }}">
-    <div class="card-header white-text primary-color">
-        Unearned Stamps For Badge {{ badge.badge_name }}
-    </div>
-    <div class="card-body">
-        <table class="table table-striped table-bordered table-responsive-md" id="unearnedTable">
-            <thead>
-                <th>Unearned Stamps</th>
-            </thead>
-            <tbody>
-                {% for u in unearned %}
-                    <tr>
-                        <td>{{ u }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
-
-<!-- /.Panel -->
 
 <!-- Panel -->
 
@@ -120,6 +102,30 @@
         </table>
     </div>
 </div>
+
+<!-- Panel -->
+
+<div class="card mb-4" style="background-color: {{ badge.color }}">
+    <div class="card-header white-text primary-color">
+        Unearned Stamps For Badge {{ badge.badge_name }}
+    </div>
+    <div class="card-body">
+        <table class="table table-striped table-bordered table-responsive-md" id="unearnedTable">
+            <thead>
+                <th>Unearned Stamps</th>
+            </thead>
+            <tbody>
+                {% for u in unearned %}
+                    <tr>
+                        <td>{{ u }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<!-- /.Panel -->
 
 <div id="ediv" class="card mb-4" style="background-color: {{ badge.color }}">
     <div class="card-header white-text primary-color">
