added calendar button opening in new tab

--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -67,7 +67,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect" href="https://calendar.google.com/calendar/embed?src=bartlett%40pdx.edu&ctz=America%2FLos_Angeles">
+                    <a class="nav-link waves-effect" target="_blank" href="https://calendar.google.com/calendar/embed?src=bartlett%40pdx.edu&ctz=America%2FLos_Angeles">
                         <i class="fa fa-calendar"></i>
                         <span class="clearfix d-none d-sm-inline-block">Calendar</span>
                     </a>
