changed spacing, removed a badge panel and a chevron

--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="card-body">
                                     {% if demo_days|length > 0 %}
-                                        <div>{{ demo_days[0]['summary'] }}</div>>
+                                        <div>{{ demo_days[0]['summary'] }}</div>
                                         <div id="clock1" data-date-string={{demo_days[0][ 'date_string' ]}}></div>
                                     {% else %}
                                         No Upcoming Event
@@ -221,8 +221,7 @@
                         </div>
                          <div class="embed-responsive embed-responsive-4by3">
                             
-                                <iframe class="cal-iframe embed-responsive-item" id='cv_if5' src='http://cdn.instantcal.com/cvir.html?id=cv_nav5&file=https://calendar.google.com/calendar/ical/bartlett%40pdx.edu/public/basic.ics&theme=BL&ccolor=%23ffffc0&dims=1&gtype=cv_monthgrid&gcloseable=0&gnavigable=1&gperiod=month&itype=cv_simpleevent'
-                                    allowTransparency=true scrolling='no' frameborder=0 height=auto width=100%></iframe>
+                            <iframe class="cal-iframe embed-responsive-item" id='cv_if5' src='http://cdn.instantcal.com/cvir.html?id=cv_nav5&file=https://calendar.google.com/calendar/ical/bartlett%40pdx.edu/public/basic.ics&theme=BL&ccolor=%23ffffc0&dims=1&gtype=cv_monthgrid&gcloseable=0&gnavigable=1&gperiod=month&itype=cv_simpleevent' allowTransparency=true scrolling='no' frameborder=0 height=auto width=100%></iframe>
                         </div>
                     </div>
                     <!--/.Panel-->
