--- a/MESAeveryday/templates/forgot_username.html
+++ b/MESAeveryday/templates/forgot_username.html
@@ -38,7 +38,7 @@ font-weight:700}header.masthead{
           {% endif %}
         {% endwith %}
         <div class="col-xl-11 mx-auto">
-          <h2 class="mb-5">Reset Username</h2>
+          <h2 class="mb-5">Remind Username</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form method="POST" action="">
