--- a/MESAeveryday/templates/admin.html
+++ b/MESAeveryday/templates/admin.html
@@ -1,65 +1,76 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "dashboard_layout.html" %}
+{% block main %}
 
 <!-- Added by Millen -->
 <!-- Admin View Placeholder -->
-
-<!--Navbar-->
-<ul class="nav navbar-nav nav-flex-icons ml-auto">
-    <li class = "nav-item">
-        <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
-    </li>
-</ul>
-
-<div class="container-fluid"> 
-    You are now in admin view   
-    <li><a href="{{ url_for('admin_control') }}">Control</a></li>
-    <li><a href="{{ url_for('admin_settings') }}">Settings</a></li>
-
-</div>
+<!-- Catches flash messages -->
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }}">
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
 
 
-<main>
-
-    <div class="container-fluid">
-
-        <div class="row">
-
-            <!-- Catches flash messages -->
-            {% with messages = get_flashed_messages(with_categories=true) %}
-              {% if messages %}
-                {% for category, message in messages %}
-                  <div class="alert alert-{{ category }}">
-                    {{ message }}
-                  </div>
-                {% endfor %}
-              {% endif %}
-            {% endwith %}
-
-
-            <!--Panel-->
-            <div class="card mb-4">
-                <div class="card-header white-text primary-color">
-                    Top Scores
-                </div>
-                <div class="card-body">
-                    {% for badge in badges %}
-                        <img class="rounded-circle account-img" src="../static/badge_icons/{{ badge.icon.file_name }}"> {{ badge.badge_name }} 
-                        <br> First Name | Last Name | School | Points | Level <br>
-                        {% for user in top_scores[badge.badge_id] %}
-                            {{ user.first_name }} | {{ user.last_name }} | {{ user.school_name }} | {{ user.total_points }} | {{ user.current_level }} <br>
-                        {% endfor %}
-                    {% endfor %}                          
-                </div>
-            </div>
-            <!--/.Panel-->          
-        </div>
+<!--Panel-->
+<div class="card mb-4">
+    <div class="card-header white-text primary-color">
+        Top Scores
     </div>
-</main>
+    <div class="card-body">
+        {% for badge in badges %}
+            <!--Grid column-->
+            <div class="col-xl-12 col-md-6 mb-4">
+                <!--Card-->
+                <div class="card card-cascade cascading-admin-card" style="background-color: {{ badge.color }}">
+
+                    <!--Card Data-->
+                    <div class="admin-up">
+                        <img class="rounded-circle account-img" style="height: 150px" src="../static/badge_icons/{{ badge.icon.file_name }}">
+                        <div class="data">
+                            <h3 class="font-weight-bold dark-grey-text">{{ badge.badge_name }}</h3>
+                        </div>
+                    </div>
+                    <!--/.Card Data-->
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <table class="table table-striped table-bordered table-responsive-md" id="{{ badge.badge_id }}" style="width: 100%">
+                            <thead>
+                                <th>First name</th>
+                                <th>Last Name</th>
+                                <th>School</th>
+                                <th>Points</th>
+                                <th>Level</th>
+                            </thead>
+                            <tbody>
+                                {% for user in top_scores[badge.badge_id] %}
+                                    <tr>
+                                        <td>{{ user.first_name }}</td>
+                                        <td>{{ user.last_name }}</td>
+                                        <td>{{ user.school_name }}</td>
+                                        <td>{{ user.total_points }}</td>
+                                        <td>{{ user.current_level }}</td>
+                                    </tr>
+                                {% endfor %} 
+                            </tbody>
+                        </table>
+                    </div>
+                    <!--/.Card content-->
+                </div>
+                <!--/.Card-->
+            </div>
+        {% endfor %}                          
+    </div>
+</div>
+<!--/.Panel-->
 <!--Main layout-->
 
 
-{% endblock content %}
+{% endblock main %}
 
 {% block scripts %}
     {{ super() }}
