--- a/MESAeveryday/templates/dashboard_layout.html
+++ b/MESAeveryday/templates/dashboard_layout.html
@@ -79,7 +79,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect" target="_blank" href="https://calendar.google.com/calendar/embed?src=bartlett%40pdx.edu&ctz=America%2FLos_Angeles">
+                    <a class="nav-link waves-effect" target="_blank" href="https://calendar.google.com/calendar/embed?src=pdx.edu_e91ro1012j2f2qhuornmch3dtg%40group.calendar.google.com&ctz=America%2FLos_Angeles">
                         <i class="fa fa-calendar"></i>
                         <span class="clearfix d-none d-sm-inline-block">Calendar</span>
                     </a>
@@ -222,9 +222,9 @@
                         </div>
                         <div class="embed-responsive embed-responsive-4by3">
                             <!-- <iframe class="cal-iframe embed-responsive-item" id='cv_if5' src='http://cdn.instantcal.com/cvir.html?id=cv_nav5&file=https://calendar.google.com/calendar/ical/bartlett%40pdx.edu/public/basic.ics&theme=BL&ccolor=%23ffffc0&dims=1&gtype=cv_monthgrid&gcloseable=0&gnavigable=1&gperiod=month&itype=cv_simpleevent' allowTransparency=true scrolling='no' frameborder=0 height=auto width=100%></iframe> --!>
-                            <iframe src="https://calendar.google.com/calendar/embed?src=bartlett%40pdx.edu&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
-	                    <div></div> 
-                            
+                            <!-- <iframe src="https://calendar.google.com/calendar/embed?src=bartlett%40pdx.edu&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
+	                    <div></div> --!> 
+                            <iframe src="https://calendar.google.com/calendar/embed?src=pdx.edu_e91ro1012j2f2qhuornmch3dtg%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
                         </div>
                     </div>
                     <!--/.Panel-->
