added favicon, term_condition, remove reset password title

--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -9,6 +9,7 @@
     {% else %}
         <title>MESA Everyday</title>
     {% endif %}
+    <link rel="icon" href="../static/img/favicon.png">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
