--- a/MESAeveryday/templates/forgot_username.html
+++ b/MESAeveryday/templates/forgot_username.html
@@ -45,7 +45,6 @@ font-weight:700}header.masthead{
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
                     <div class="form-group">
-                        {{ form.email.label(class="form-control-label") }}
                         {% if form.email.errors %}
                             {{ form.email(class="form-control form-control-lg is-invalid") }}
                             <div class="invalid-feedback">
@@ -54,7 +53,7 @@ font-weight:700}header.masthead{
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.email(class="form-control form-control-lg") }}
+                            {{ form.email(class="form-control form-control-lg", placeholder="request username") }}
                         {% endif %}
                     </div>
                 </fieldset>
