small changes to term condition

--- a/MESAeveryday/templates/landpage.html
+++ b/MESAeveryday/templates/landpage.html
@@ -171,7 +171,7 @@ font-weight:700}header.masthead{
               <!-- Terms of service -->
               <p>By clicking
                   <em>Sign up</em> you agree to our
-                  <a href="term_of_service.html" target="_blank">terms of service</a>
+                  <a href="{{ url_for('term_of_service') }}" target="_blank">terms of service</a>
               </p>
           </form>
           <!-- Default form register -->
